# chordpro

./: README.md  Text-ChordPro-Parser.html  Text-ChordPro-Types.html  chordpro.cabal  chordpro.haddock  doc-index.html  index-frames.html  index.html  mini_Text-ChordPro-Parser.html  mini_Text-ChordPro-Types.html
scripts/: deploy-haddock-manually.sh
src/Text/ChordPro/: Parser.hs  Types.hs
test/: test.hs
