name:                chordpro
version:             0.1
synopsis:            A library for parsing chordpro files and working with the result
homepage:            https://github.com/relrod/chordpro
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2016 Ricky Elrod
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Text.ChordPro.Parser
                     , Text.ChordPro.Types
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , parsers >= 0.12 && < 1
                     , trifecta >= 1 && < 2
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              test.hs
  build-depends:        base >= 4 && < 5
                      , tasty >= 0.10
                      , tasty-hunit >= 0.9
                      , chordpro
                      , trifecta >= 1 && < 2